# log-analysis

./: .gitignore  README.md  cdk_app.py  pyproject.toml
log_analysis/fortigate_lambda/: lambda_function.py  test_event.json
log_analysis/monitor_lambda/: Dockerfile  lambda_function.py
log_analysis/paloalto_lambda/: lambda_function.py  test_event.json
log_analysis/stacks/: __init__.py  dws_stack.py  monitor_stack.py  ods_stack.py
log_analysis/traffic_lambda/: config.py  fortigate.sql  lambda_function.py  paloalto.sql  traffic.sql
